examples/errors/parsing/if-no-else.cn
main : () [impure] =
  if true then 1
